src/style.css
:root {
  --bgc-page: lavender;
  --card-shadow: .25rem .25rem .25rem rgba(0,0,0,.1),
    inset .25rem .25rem .25rem rgba(255,255,255,.5);
  --card-shadow-invert: inset .25rem .25rem .25rem rgba(0,0,0,.1),
    .25rem .25rem .25rem rgba(255,255,255,.5);
  --card-shadow-open: inset 0 0 5rem hsl(240, 70%, 90%);
  --card-bg-hover: rgba(255, 255, 255, 0.5);
  --label-bg-anim: linear-gradient(
    to right,
    transparent 0%, rgba(255, 255, 255, 0.5),
    transparent 100%
  ) no-repeat;
  --icon-size: 30px;
  --icon-menu-size: 40px;
  --icon-check-size: 20px;
  --txt-col-1: #000;
  --txt-col-2: #444;
  --txt-col-3: #666;
  --font-size-title: 1.75rem;
  --card-border-rad: .75rem;
  --card-open-transition: 250ms;
  --card-padding: .5rem;
  --card-drag-padding: calc(var(--font-size-title) + var(--card-padding) * 2.75);
  --hover-anim-duration: 250ms;
  --menu-width: 350px;
  --menu-width-widescreen: 400px;
  --viewport-min-width: 600px;
  --deletion-delay: 2s; 
  --hover-delay: 150ms;
  --menu-btn-bg-col: #aaa;
  --menu-bg-col: rgba(255, 255, 255, 0.5);
  --chk-bg-col: none;
  --priority-low: lime;
  --priority-mid: goldenrod;
  --priority-high: orangered;
}

:root.dark {
  --bgc-page: hsl(240, 20%, 30%);
  --card-shadow: .25rem .25rem .25rem rgba(0,0,0,.1),
    inset .25rem .25rem .25rem rgba(255, 255, 255, .1);
  --card-shadow-invert: inset .25rem .25rem .25rem rgba(0,0,0,.1),
    .25rem .25rem .25rem rgba(255,255,255, .1);
  --card-shadow-open: inset 0 0 5rem hsl(240, 20%, 25%);
  --card-bg-hover: rgba(70, 70, 70, 0.5);
  --label-bg-anim: linear-gradient(
    to right,
    transparent 0%, rgba(255, 255, 255, 0.1),
    transparent 100%
  ) no-repeat;
  --txt-col-1: #ccc;
  --txt-col-2: #aaa;
  --txt-col-3: #888;
  --menu-btn-bg-col: #555;
  --menu-bg-col: rgba(64, 64, 64, 0.5);
  --chk-bg-col: rgba(0, 0, 0, 0.1);
  --priority-low: hsl(120, 50%, 40%);
  --priority-mid: hsl(43, 40%, 45%);
  --priority-high: hsl(16, 50%, 40%);
}

/* default values reset */
body { padding: 0; margin: 0; min-width: var(--viewport-min-width);}
ol, ul { padding: 0; margin: 0; list-style-type: none; }
h1, h2, p {margin: 0;}
h1 {
  color: var(--txt-col-1);
  font-size: 2rem;
  font-weight: 900;
  text-transform: uppercase;
  white-space: nowrap;
  overflow: hidden;
  text-shadow: 1px 1px 1px hsl(240, 30%, 50%);
}
input[type="text"], input[type="date"] {
  padding: 0;
  margin: 0;
}
* {font-family: 'Times New Roman', Times, serif;}

input::selection {
  color: white;
  background-color: hsl(240, 80%, 70%);
}
input:not([type="checkbox"]):focus {
  outline: 4px solid rgba(46, 16, 192, .25);
  transition: 0ms;
}

/* menu */

#menu-button {
  position: absolute;
  left: 0;
  top: 0;
  z-index: 2;
  background-image: url(./media/images/icons/menu.svg);
  background-size: 100%;
  width: var(--icon-menu-size);
  height: var(--icon-menu-size);
  box-shadow: var(--card-shadow);
  background-color: var(--menu-btn-bg-col);
  transition: background-color 150ms;
}
#menu-button:hover {
  cursor: pointer;
  background-color: white;
}

#menu {
  z-index: 2;
  position: absolute;
  box-sizing: border-box;
  padding: .5rem;
  top: var(--icon-menu-size);
  left: 0;
  max-height: calc(100vh - var(--icon-menu-size));
  overflow-x: hidden;
  overflow-y: auto;
  width: var(--menu-width);
  box-shadow: var(--card-shadow);
  backdrop-filter: blur(5px);
  color: var(--txt-col-1);
  background-color: var(--menu-bg-col);
  font-size: 1.75rem;
  display: none;
}
#menu.reveal { display: block; }

#menu .menu-item {
  display: grid;
  grid-template-columns: 1fr auto auto;
  align-items: center;
  height: calc(var(--icon-menu-size) * 1.25);
}

#menu .menu-item p {
  margin: .5rem 0;
  width: 200px;
  overflow: hidden;
  cursor: pointer;
}

#menu .menu-item .edit-project {
  font-size: 1.75rem;
  width: 200px;
}

.fieldset-list li {
  transition: padding 200ms, background-color 350ms;
}.fieldset-list li:hover {
  box-shadow: var(--card-shadow);
}

#screen-cover-menu {display: none;}
#screen-cover-menu.reveal {
  display: block;
  position: absolute;
  top: 0;
  left: 0;
  width: 100vw;
  height: 100vh;
}

#menu .project-title {
  white-space: nowrap;
  overflow: hidden;
}

#menu .fieldset-options p {
  display: flex;
  width: 100%;
}

#menu a {
  text-decoration: none;
  color: inherit;
  width: 100%;
  height: 100%;
}

#menu .fieldset-options .menu-item.dark-mode {
  display: grid;
  grid-template-columns: auto 1fr;
}

.dark-mode input {
  --transition-dur: 350ms;
  --transition: background-color calc(var(--transition-dur) * .5) ease-in-out,
  transform var(--transition-dur) cubic-bezier(.68,-0.55,.27,1.55);
  appearance: unset;
  position: relative;
  width: calc(var(--icon-size) * 2);
  height: var(--icon-size);
  margin: 0;
  margin-right: .5rem;
  border-radius: 1rem;
  overflow: hidden;
  cursor: pointer;
}.dark-mode input::before {
  position: absolute;
  content: "";
  inset: 0;
  border-radius: 1rem;
  background-color: var(--bgc-page);
  box-shadow: var(--card-shadow-invert);
  transition: var(--transition);
}.dark-mode input::after {
  position: absolute;
  content: "";
  border-radius: 50%;
  height: 100%;
  aspect-ratio: 1/1;
  background-color: hsl(60, 80%, 70%);
  box-shadow: var(--card-shadow);
  transition: var(--transition);
}.dark-mode input:checked:before {
  background-color: hsl(240, 20%, 40%);
}.dark-mode input:checked::after {
  transform: translateX(100%);
  background-color: hsl(240, 30%, 75%);
}
.dark-mode label { cursor: pointer; }

#menu .fieldset-options .menu-item.about {
  --icon-size: 50px;
  --duration: 3s;
  background-size: 700%;
  background-position: bottom left;
}
#menu.reveal .fieldset-options .menu-item.about {
  background: url(./media/images/background/github-mark.svg);
  background-size: var(--icon-size);
  animation: bg-anim var(--duration) calc(var(--duration) / 5) infinite linear,
  bg-zoom-out var(--duration) cubic-bezier(.08,.82,.17,1) forwards;
}
/* ... */

